tooling/nargo_cli/tests/snapshots/execution_success/databus/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: u32, y: u32, z: [u32; 4]) -> return_data u32 {
    let a: u32 = z[x];
    // Safety: comment added by `nargo expand`
    unsafe {
        a + foo(y)
    }
}

unconstrained fn foo(x: u32) -> u32 {
    x + 1
}
